fix: do not use brew in linux

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,14 @@ jobs:
       matrix:
         os:
           - macos-latest
+          - ubuntu-latest
         include:
           - os: macos-latest
             arch: arm64
             platform: macOS
+          - os: ubuntu-latest
+            arch: x86_64
+            platform: Linux
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -69,6 +73,7 @@ jobs:
       matrix:
         os:
           - macos-latest
+          - ubuntu-latest
         include:
           - php-version: 8.3
           - os: macos-latest
@@ -76,6 +81,11 @@ jobs:
             platform: macOS
             target: darwin-arm64
             filename: dev-darwin-arm64
+          - os: ubuntu-latest
+            arch: x86_64
+            platform: linux
+            target: linux-x86_64
+            filename: dev-linux-x86_64
     runs-on: ${{ matrix.os }}
     steps:
       - name: Setup PHP
@@ -91,8 +101,11 @@ jobs:
           repository: crazywhalecc/static-php-cli
           path: spc
 
-      - run: |
+      - if: ${{ matrix.platform }} == 'macOS'
+        run: |
           brew install automake gzip
+
+      - run: |
           echo "SPC_BUILD_OS=${{ matrix.platform }}" >> $GITHUB_ENV
 
       - name: Resolve Variables
