--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,19 +73,20 @@ jobs:
       matrix:
         os:
           - macos-latest
-          - ubuntu-latest
+          # - ubuntu-latest
         include:
-          - php-version: 8.3
           - os: macos-latest
             arch: arm64
             platform: macOS
             target: darwin-arm64
             filename: dev-darwin-arm64
+            php-version: 8.3
           - os: ubuntu-latest
             arch: x86_64
             platform: linux
             target: linux-x86_64
             filename: dev-linux-x86_64
+            php-version: 8.2
     runs-on: ${{ matrix.os }}
     steps:
       - name: Setup PHP
@@ -93,7 +94,13 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           extensions: mbstring, bcmath, swoole
-          tools: composer:v2
+          tools: composer:v2,pecl,php-config
+
+      - name: Check Setup PHP
+        run: |
+          set -e
+          command -v php-config
+          command -v pecl
 
       - name: Checkout crazywhalecc/static-php-cli
         uses: actions/checkout@v4
@@ -108,6 +115,21 @@ jobs:
 
       - run: |
           echo "SPC_BUILD_OS=${{ matrix.platform }}" >> $GITHUB_ENV
+
+      - name: Set SPC Binary
+        id: set-spc-binary
+        run: |
+          set -e
+          if [ "${{ matrix.platform }}" = 'macOS' ]; then
+            bin="spc"
+            php_version="${{ matrix.php-version }}"
+          else
+            bin="spc-alpine-docker"
+            php_version="8.2"
+          fi
+
+          echo "bin=$bin" >> $GITHUB_OUTPUT
+          echo "php-version=$php-version" >> $GITHUB_OUTPUT
 
       - name: Resolve Variables
         id: vars
@@ -135,19 +157,19 @@ jobs:
 
       - name: Instal SPC Dependencies
         run: |
-          ./bin/spc doctor --auto-fix --no-interaction
+          ./bin/${{ steps.set-spc-binary.outputs.bin }} doctor --auto-fix --no-interaction
         working-directory: spc
 
       - name: Download SPC files
         if: steps.spc-cache.outputs.cache-hit != 'true'
-        run: ./bin/spc download --with-php=${{ matrix.php-version }} --for-extensions=${{ steps.vars.outputs.SPC_EXTENSIONS }} --debug
+        run: ./bin/${{ steps.set-spc-binary.outputs.bin }} download --with-php=${{ steps.set-spc-binary.outputs.php-version }} --for-extensions=${{ steps.vars.outputs.SPC_EXTENSIONS }} --debug
         working-directory: spc
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build PHP Binaries (Micro and CLI)
         if: steps.spc-cache.outputs.cache-hit != 'true'
-        run: ./bin/spc build --build-micro --build-cli --with-micro-fake-cli ${{ steps.vars.outputs.SPC_EXTENSIONS }}
+        run: ./bin/${{ steps.set-spc-binary.outputs.bin }} build --build-micro --build-cli --with-micro-fake-cli ${{ steps.vars.outputs.SPC_EXTENSIONS }} --debug
         working-directory: spc
 
   release:
