fix: micro combine in workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,11 +118,11 @@ jobs:
           ./bin/spc doctor --auto-fix --no-interaction
         working-directory: spc
 
-      - name: Link dist directory on Linux
-        if: ${{ matrix.platform == 'linux' }}
-        run: |
-          mkdir -p $GITHUB_WORKSPACE/dist
-          ln -s $GITHUB_WORKSPACE/dist $GITHUB_WORKSPACE/spc/dist
+      # - name: Link dist directory on Linux
+      #   if: ${{ matrix.platform == 'linux' }}
+      #   run: |
+      #     mkdir -p $GITHUB_WORKSPACE/dist
+      #     ln -s $GITHUB_WORKSPACE/dist $GITHUB_WORKSPACE/spc/dist
 
 
       - if: steps.spc-cache.outputs.cache-hit != 'true'
@@ -137,12 +137,17 @@ jobs:
         run: php dev app:build dev.phar --build-version=${{ github.ref_name }}
 
       - name: Build DEV binary for ${{ matrix.target }}
+        working-directory: spc
         run: |
-            php -d memory_limit=-1 $GITHUB_WORKSPACE/spc/bin/${{ steps.set-spc-binary.outputs.bin }} micro:combine $GITHUB_WORKSPACE/builds/dev.phar -O ${{ steps.vars.outputs.combine_file_path }}
+            set -e
+            mkdir -p dist
+            php -d memory_limit=-1 bin/${{ steps.set-spc-binary.outputs.bin }} micro:combine $GITHUB_WORKSPACE/builds/dev.phar -O ${{ steps.vars.outputs.combine_file_path }}
             ls -alh
+            ls -alh dist
             ls -alh $GITHUB_WORKSPACE
             ls -alh $GITHUB_WORKSPACE/dist
             ls -alh $(dirname ${{ steps.vars.outputs.FILEPATH }})
+            mv dist/${{ matrix.filename }} ${{ steps.vars.outputs.FILEPATH }}
             chmod +x ${{ steps.vars.outputs.FILEPATH }}
 
       - name: Zip Binary
