--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,13 +141,13 @@ jobs:
         run: |
             set -e
             mkdir -p dist
-            php -d memory_limit=-1 bin/${{ steps.set-spc-binary.outputs.bin }} micro:combine $GITHUB_WORKSPACE/builds/dev.phar -O ${{ steps.vars.outputs.combine_file_path }}
+            php -d memory_limit=-1 bin/spc micro:combine $GITHUB_WORKSPACE/builds/dev.phar -O ${{ steps.vars.outputs.FILEPATH }}
             ls -alh
             ls -alh dist
             ls -alh $GITHUB_WORKSPACE
             ls -alh $GITHUB_WORKSPACE/dist
             ls -alh $(dirname ${{ steps.vars.outputs.FILEPATH }})
-            mv dist/${{ matrix.filename }} ${{ steps.vars.outputs.FILEPATH }}
+            # mv dist/${{ matrix.filename }} ${{ steps.vars.outputs.FILEPATH }}
             chmod +x ${{ steps.vars.outputs.FILEPATH }}
 
       - name: Zip Binary
