--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,14 @@ concurrency:
 
 jobs:
   build:
-    name: Build ${{ github.ref_name }} on ${{ matrix.platform }}
+    name: Build ${{ github.ref_name }} on ${{ matrix.platform }}(${{ matrix.arch }})
     strategy:
       matrix:
         os:
           - macos-latest
+          - macos-13
           - ubuntu-latest
+          - ubuntu-24.04-arm
         include:
           - php-version: 8.3
           - os: macos-latest
@@ -27,11 +29,21 @@ jobs:
             platform: macOS
             target: darwin-arm64
             filename: dev-darwin-arm64
+          - os: macos-13
+            arch: x86_64
+            platform: macOS
+            target: darwin-x86_64
+            filename: dev-darwin-x86_64
           - os: ubuntu-latest
             arch: x86_64
             platform: linux
             target: linux-x86_64
             filename: dev-linux-x86_64
+          - os: ubuntu-24.04-arm
+            arch: arm64
+            platform: linux
+            target: linux-arm64
+            filename: dev-linux-arm64
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
